Contrast Issues

--- a/assets/css/dark-styles.css
+++ b/assets/css/dark-styles.css
@@ -256,8 +256,5 @@
 		background-color: rgb(202, 84, 30);
 	}
 
-	.contrastlistitem {
-		background-color: #000;
-	}
 }
 
